--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 <body>
   <hr/>
 <p>你好,欢迎访问我的个人主页。</p>
+  <address>
+    邮箱：<a herf='mailto:348838242@qq.com?subject=what%20is%20waong%20with%20you'>348838242@qq.com</a>
+  </address>
 </body>
 </html>
