--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <hr/>
 <p>你好,欢迎访问我的个人主页。</p>
   <fieldset>
-    <legend>英雄联盟</legend>
+    <legend align='center'>英雄联盟</legend>
   </fieldset>
   <address>
     邮箱：<a herf='mailto:348838242@qq.com?subject=what%20is%20waong%20with%20you'>348838242@qq.com</a>
