--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <fieldset>
     <legend align='center'>英雄联盟</legend>
   </fieldset>
+  <b>邮箱：</b><a herf='mailto:348838242@qq.com?subject=what%20is%20waong%20with%20you'>348838242@qq.com</a>
   <address>
-    邮箱：<a herf='mailto:348838242@qq.com?subject=what%20is%20waong%20with%20you'>348838242@qq.com</a>
+    地址：江西省吉安市泰和县
   </address>
 </body>
 </html>
