--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <p>你好,欢迎访问我的个人主页。</p>
   <fieldset>
     <legend align='center'>英雄联盟</legend>
+    <form>
+      用户名：<input type='text'name="user"><br/>
+      密码：<input type="password" name="pwd">
+      <input type='submit' value="登陆">
+      </from>
   </fieldset>
   <a href="https://www.baidu.com">baidu</a>
   <b>邮箱：</b><a herf='mailto:348838242@qq.com?subject=what%20is%20waong%20with%20you'>348838242@qq.com</a>
