--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
   <hr/>
-<p>你好,欢迎访问我的个人主页。</p>
+<p align="center">你好,欢迎访问我的个人主页。</p>
   <fieldset>
     <legend align='center'>英雄联盟</legend>
     <form>
@@ -12,8 +12,8 @@
       <input type='submit' value="登陆">
       </from>
   </fieldset>
-  <a href="https://www.baidu.com">baidu</a>
-  <b>邮箱：</b><a herf='mailto:348838242@qq.com?subject=what%20is%20waong%20with%20you'>发送邮箱</a>
+  <a href="https://www.baidu.com">百 度</a>
+  <b>邮箱：</b><a herf="mailto:348838242@qq.com?subject=what%20is%20wong%20with%20you">发送邮箱</a>
   <address>
     地址：江西省吉安市泰和县
   </address>
