--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-  <head><title>我的主页</title></head>
-
+  <head><title>我的主页</title>
+  </head>
+<script>
+  
+  </script>
 <body>
   <hr/>
 <p align="center">你好,欢迎访问我的个人主页。</p>
