--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </from>
   </fieldset>
   <a href="https://www.baidu.com">百 度</a>
-  <b>邮箱：</b><a herf="mailto:348838242@qq.com?subject=what%20is%20wong%20with%20you">发送邮箱</a>
+  <b>邮箱：</b><a href="mailto:348838242@qq.com?subject=what%20is%20wong%20with%20you">发送邮箱</a>
   <address>
     地址：江西省吉安市泰和县
   </address>
