--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       </from>
   </fieldset>
   <a href="https://www.baidu.com">百 度</a>
+  <div>
+    <a href="">上一页</a><span>1/96</span><a href="">下一页</a>
+  </div>
   <b>邮箱：</b><a href="mailto:348838242@qq.com?subject=what%20is%20wong%20with%20you">发送邮箱</a>
   <address>
     地址：江西省吉安市泰和县
