--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   }
   </script>
 <body>
+  <form method="GET" action="https://www.baidu.com">
+  <input type='text' name= "word">
+    <input type="submit" value="搜索">
+  </form>
   <hr/>
 <p align="center">你好,欢迎访问我的个人主页。</p>
   <fieldset>
