--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <input type='submit' onclick="myfunction()" value="登陆">
       </from>
   </fieldset>
-  <a href="https://www.baidu.com">百 度</a>
+  <a href="https://www.baidu.com" target="_blank">百 度</a>
   <div>
     <a href="">上一页</a><span>1/96</span><a href="">下一页</a>
   </div>
