--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   }
   </script>
 <body>
-  <form method="GET" action="https://www.baidu.com">
+  <form method="GET" action="https://www.baidu.com/s">
   <input type='text' name= "word">
     <input type="submit" value="搜索">
   </form>
