--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
       alert("用户名请输入数字");
     }
   }
+  functon welcome()
+  {
+    alert('欢迎您访问我的主页')
+  }
   </script>
-<body>
+<body onload='welcome()'>
   <form method="GET" action="https://www.baidu.com/s">
   <input type='text' name= "word">
     <input type="submit" value="搜索">
