--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head><title>我的主页</title>
+    <script src="" ></script>
     <script>
   function myfunction()
   {
