--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script>
   function myfunction()
   {
-    var x=document.getElementsById("demo").values
+    var x=document.getElementsById("demo").value
     if (x==''||isNaN(x))
     {
       alert("用户名请输入数字");
