--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   }
   </script>
   </head>
-<body onload='welcome()'>
+<!--<body onload='welcome()'>-->
+  <body>
   <form method="GET" action="https://www.baidu.com/s">
   <input type='text' name= "word">
     <input type="submit" value="搜索">
