--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   {
     alert('欢迎您访问我的主页');
   }
+  function test()
+      {
+        alert('你去死吧！')
+      }
   </script>
   </head>
 <!--<body onload='welcome()'>-->
@@ -41,5 +45,6 @@
   <address>
     地址：江西省吉安市泰和县
   </address>
+    <button type='button' onclick='test()'>测试</button>
 </body>
 </html>
