--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script>
   function myfunction()
   {
-    var x=document.getElementsById("demo").value
+    var x=document.getElementById("demo").value
     if (x==''||isNaN(x))
     {
       alert("用户名请输入数字");
@@ -17,7 +17,7 @@
   }
   function test()
       {
-        alert('你去死吧！')
+        alert('你干嘛要点这个按钮！')
       }
   </script>
   </head>
