--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <hr/>
 <p align="center">你好,欢迎访问我的个人主页。</p>
   <fieldset>
-    <legend align='center'>英雄联盟</legend>
+    <legend align='center'>登陆界面</legend>
     <form>
       用户名：<input type='text'name="user" id="demo"><br/>
       密码：<input type="password" name="pwd">
