--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
   </head>
 <!--<body onload='welcome()'>-->
   <body>
-  <form method="GET" action="https://www.baidu.com/s">
-  <input type='text' name= "word">
-    <input type="submit" value="搜索">
-  </form>
+ 
   <hr/>
 <p align="center">你好,欢迎访问我的个人主页。</p>
   <fieldset>
@@ -41,6 +38,10 @@
   <div>
     <a href="">上一页</a><span>1/96</span><a href="">下一页</a>
   </div>
+  <form method="post" action="https://www.baidu.com/s">
+  <input type='text' name= "word">
+  <input type="submit" value="搜索">
+  </form>
   <b>邮箱：</b><a href="mailto:348838242@qq.com?subject=what%20is%20wong%20with%20you">发送邮箱</a>
   <address>
     地址：江西省吉安市泰和县
