--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
   <address>
     地址：江西省吉安市泰和县
   </address>
+    <script>
+      var d=new Date()
+      document.write(d)
+    </script>
     <button type='button' onclick='test()'>测试</button>
 </body>
 </html>
