--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <p align="center">你好,欢迎访问我的个人主页。</p>
   <fieldset>
     <legend align='center'>登陆界面</legend>
-    <form>
+    <form method='get' action=''>
       用户名：<input type='text'name="user" id="demo"><br/>
       密码：<input type="password" name="pwd">
       <input type='submit' onclick="myfunction()" value="登陆">
