--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
           document.write('你的名字叫'+x);
         }
       }
+      function queren()
+      {
+          var x=confirm('你喜欢吃零食吗？') 
+          if (x==true)
+          {
+            alert('我也喜欢')
+            else
+            {
+            alert('我不喜欢')
+      }
   </script>
   </head>
 <!--<body onload='welcome()'>-->
@@ -60,5 +70,6 @@
     </script>
     <button type='button' onclick='test()'>测试</button>
     <button type='button' onclick='cue()'>提示</button>
+    <button type='button' onclick='queren()'>确认框</button>
 </body>
 </html>
